# ledfx-flutter

./: .gitignore  README.md  ffigen.yaml  generate_coeffs.dart  pubspec.yaml  test_benchmark.dart  test_pvoc.dart
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/in/drdna/ledfx/: EngineHolder.kt  MainActivity.kt  RecordingBridge.kt  RecordingService.kt
hook/: build.dart
lib/: background.dart  main.dart  worker.dart
lib/dsp/: db.dart  digital_filter.dart  fft.dart  filterbank.dart  resampler.dart  sinc_fastest_coeffs.dart  types.dart  utils.dart  vocoder.dart
lib/ffi/aubio/: aubio.dart  aubio_bindings.dart
lib/platform_interface/: audio_bridge.dart
lib/src/: core.dart  events.dart  virtual.dart  worker.dart
lib/src/audio/: audio.dart  const.dart  dsp.dart  mel_utils.dart  melbank.dart
lib/src/devices/: ddp.dart  device.dart  dummy.dart  network.dart  packets.dart  udp.dart  wled.dart
lib/src/effects/: audio.dart  audio_reactive.dart  effect.dart  melbank.dart  utils.dart
lib/src/effects/audio_reactive/: audio.dart  audio_reactive.dart  dsp.dart  mel_utils.dart  melbank.dart
lib/src/effects/effects/: energy.dart  gradient.dart  temporal.dart  wavelength.dart
lib/src/platform/: audio_bridge.dart
lib/src/storage/: storage.dart
lib/ui/: adaptive_layout.dart  home_body.dart  settings_page.dart
lib/ui/pages/: adaptive_layout.dart  device_page.dart  effect_page.dart  home_body.dart  home_page.dart  segments_page.dart  settings_page.dart  virtual_page.dart
lib/ui/visualizer/: visualizer_painter.dart
lib/utils/: buffer.dart  colors.dart  common.dart  list.dart  network.dart  polynominal.dart  utils.dart
src/: CMakeLists.txt
windows/runner/: CMakeLists.txt  audio_recorder.cpp  audio_recorder.h  flutter_window.cpp  flutter_window.h  recording_bridge.cpp  recording_bridge.h
